=========
Changelog
=========

0.2 (unreleased)
================

- Introduce new component modelling approach.

- Start writing documentation.